@@ -1,5 +1,6 @@
 ncmpc 0.21 - not yet released
 * add a chat screen for communication with other clients on the same server
+* song format: evaluate literal strings as true
 
 
 ncmpc 0.20 - (02/05/2012)
